--- a/styles/output/pl-marketing-pdf.css
+++ b/styles/output/pl-marketing-pdf.css
@@ -951,7 +951,7 @@ div[data-type=composite-page].os-eob {
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 1.5rem;
-  background-color: #F9F9F9;
+  background-color: #FFFFFF;
   border-top-right-radius: 135px;
   position: relative;
   top: 2.2in;
